--- a/src/App.scss
+++ b/src/App.scss
@@ -1,123 +1,3 @@
-* {
-  background-color: azure;
-  color: black;
-}
-
-.image-container {
-  display: flex;
-  gap: 300px;
-}
-
-.image-container img {
-  width: 600px;
-  height: 600px;
-  border-radius: 20%;
-  object-fit: cover;
-  border: 5px solid rgb(25, 114, 139);
-}
-.label-container {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0;
-  padding: 0 470px; /* 이미지 왼쪽 간격을 맞추기 위한 패딩 */
-  font-weight: bold;
-  font-size: larger;
-}
-
-#yourImg {
-  margin-left: 200px;
-}
-
-.btn {
-  border: 3px solid rgb(25, 114, 139);
-}
-
-.input-file-button {
-  margin-left: 200px;
-  padding: 10px 12px;
-  background-color: rgb(25, 114, 139);
-  border-radius: 4px;
-  color: white;
-  cursor: pointer;
-}
-
-#celebrityNameInput {
-  border-radius: 4px;
-  padding: 10px 12px;
-}
-
-#resultBtn {
-  width: 100px;
-  height: 50px;
-  border-radius: 15px;
-  font-weight: bold;
-}
-
-#resultBtn:hover {
-  background-color: rgb(25, 114, 139);
-  color: aliceblue;
-  transition: 10ms;
-}
-
-h1 {
-  font-size: xx-large;
-  font-weight: bold;
-  text-align: center;
-}
-
-.image-box {
-  width: 250px;
-  height: 250px;
-  border: 2px dashed #ccc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-}
-
-.drop-zone {
-  text-align: center;
-}
-
-.upload-button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.image-overlay {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .change-image-button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-
-  &:hover .change-image-button {
-    opacity: 1;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
